# cpp_lessons

./: .gitignore  .gitmodules  Initial_text.txt
HelloWorld/: main
OOP1/: CMakeLists.txt  InitDetector.cpp  InitDetector.hh  main.cpp
OOP10/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  Wave.h  WaveWidget.cpp  WaveWidget.h  main.cpp  rebuild.sh
OOP11/: CMakeLists.txt  Calorimeter.h  Detector.h  Experiment.h  HeaderTemplate.h  OOP11Notes.txt  Scintillator.h  main.cpp
OOP2/: CMakeLists.txt  FirstDetector.cpp  FirstDetector.hh  main.cpp
OOP3/: CMakeLists.txt  SecondDetector.cpp  SecondDetector.hh  main.cpp
OOP4/ShapeAreaCalc/: CMakeLists.txt  main.cpp
OOP4/ShapeAreaCalc/include/: Circle.h  Rectangle.h  Shape.h
OOP4/ShapeAreaCalc/src/: Circle.cpp  Rectangle.cpp
OOP5/: CMakeLists.txt  main.cpp
OOP5/include/: Scintillator_v1.h
OOP5/src/: Scintillator_v1.cpp
OOP6/: CMakeLists.txt  main.cpp
OOP6/include/: Detector.h
OOP6/src/: Detector.cpp
OOP7/: Circle.cpp  Circle.h  NotesOnOOP7.txt  Shape.h  Squire.cpp  Squire.h  main.cpp
OOP8/: CircularMapper  Wave.h  WaveformGenerator.h  main.cpp
OOP9/: CMakeLists.txt  CircularMapper.h  WaveWidget.cpp  WaveformGenerator.h  main.cpp
